--- a/blog_frontend/package.json
+++ b/blog_frontend/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": { 
+  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -25,7 +25,8 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
